--- a/search/index.html
+++ b/search/index.html
@@ -7,7 +7,7 @@ Initial setup Search depends on additional output content type of JSON in config
 No content shown here is rendered, all content is based in the template layouts/page/search.html
 Setting a very low sitemap priority will tell search engines this is not important content.
 This implementation uses Fusejs and mark.js
-Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [&ldquo;HTML&rdquo;, &ldquo;JSON&rdquo;] ```"><script data-goatcounter=https://mr-penguin.goatcounter.com/count async src=//gc.zgo.at/count.js></script></head><body class="type-posts kind-page" data-spy=scroll data-target=#TableOfContents data-offset=80><div class="container-fluid bg-dimmed wrapper"><nav class="navbar navbar-expand-xl top-navbar final-navbar shadow"><div class=container><button class="navbar-toggler navbar-light" id=sidebar-toggler type=button>
+Initial setup Search depends on additional output content type of JSON in config.toml ``` [outputs] home = [“HTML”, “JSON”] ```"><script data-goatcounter=https://mr-penguin.goatcounter.com/count async src=//gc.zgo.at/count.js></script></head><body class="type-posts kind-page" data-spy=scroll data-target=#TableOfContents data-offset=80><div class="container-fluid bg-dimmed wrapper"><nav class="navbar navbar-expand-xl top-navbar final-navbar shadow"><div class=container><button class="navbar-toggler navbar-light" id=sidebar-toggler type=button>
 <span class=navbar-toggler-icon></span>
 </button>
 <a class=navbar-brand href=/><img src=/images/site/main-logo_hu8a6664d162ee19d56ce0a39fde3a1af3_21037_42x0_resize_box_3.png alt=Logo>
